force-app/main/default/objects/CC_DataSyncEvent__e/CC_DataSyncEvent__e.object-meta.xml
<CustomObject>
    <description>It is used to sync data between two objects.</description>
    <label>DataSyncEvent</label>
    <pluralLabel>DataSyncEvent</pluralLabel>
</CustomObject>