force-app/main/default/objects/CC_DataSyncEvent__e/fields/CC_Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Source_Record_Id__c</fullName>
    <description>Source record&apos;s Id.</description>
    <inlineHelpText>Source record&apos;s Id.</inlineHelpText>
    <label>Source Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>