force-app/main/default/objects/CC_DataSyncEvent__e/fields/CC_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>CC_Target_Object__c</fullName>
    <description>API Name of Target Object</description>
    <label>Target Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>