force-app/main/default/objects/CC_DataSyncEvent__e/fields/CC_Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Target_Record_Id__c</fullName>
    <description>Id of target record if present else new record will be created</description>
    <inlineHelpText>Id of target record if present else new record will be created</inlineHelpText>
    <label>Target Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>